update-manager (1:0.87.10) hardy; urgency=low

  * remove code duplication in the confirmChanges() code and make the
    warning more readable (LP: #188724)

 -- 

update-manager (1:0.87.9) hardy; urgency=low

  * rebuild due to python-central issues

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 19 Feb 2008 18:11:08 +0100

update-manager (1:0.87.8) hardy; urgency=low

  * deal with packages in broken reqreinst state by
    offering to remove them (LP: #1922578)
  * UpdateManager/UpdateManager.py:
    - display a meaningful message when no information
      of the last update can be found (LP: 192328)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Feb 2008 17:08:47 +0100

update-manager (1:0.87.7) hardy; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - honor DEBUG_UPDATE_MANAGER environment and give some
      debug output on the meta-release fetching/parsing
  * UpdateManager/DistUpgradeFetcher.py:
    - cancel if the ReleaseNotes window is closed via the 
      window close control (thanks to Matthew Paul Thomas)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - show update details in smaller font instead of italic
  * more UI improvements as suggested by Matthew Paul Thomas
  * DistUpgrade/DistUpgradeControler.py:
    - enforce KeepInstalledSection rule only when running on
      a network, otherwise we run into CD upgrade issues
    - when fetching the prerequists, be more robust in the 
      mirror selection (and add tests for this)
  * DistUpgrade/DistUpgrade.cfg:
    - add slocate to the force obsoletes, mlocate replaces it
  
  [ Brian Murray ]
  * Dialog enhancements and typo fixes (LP: 182055)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 16 Feb 2008 00:25:33 +0100

update-manager (1:0.87.6) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix removal of obsolete packages (regression from 0.87.5)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Feb 2008 15:57:13 +0100
