@@ -10,7 +10,7 @@
 #          (e.g. /cdrom/cdromugprade)
 
 # the codename is AUTO-GENERATED from the build-host relase codename
-CODENAME=gutsy
+CODENAME=hardy
 UPGRADER_DIR=dists/stable/main/dist-upgrader/binary-all/
 
 cddirname=${0%\/*}
