@@ -2,6 +2,3 @@
 # this is safe to remove after the upgrade
 ${mirror}
 deb http://archive.ubuntu.com/ubuntu/ feisty-backports main/debian-installer
-
-# below is just for testing
-#deb http://archive.dogfood.launchpad.net/ubuntu feisty-backports main/debian-installer
