@@ -2,6 +2,13 @@ update-manager (1:0.87.10) hardy; urgency=low
 
   * remove code duplication in the confirmChanges() code and make the
     warning more readable (LP: #188724)
+  * DistUpgrade/DistUpgradeController.py:
+    - when adding prerequists, ensure that no duplicated lines are
+      added, plus add test for this (thanks to Kolbjørn Barmen)
+  * DistUpgrade/cdromupgrade:
+    - updated to hardy
+  * DistUpgrade/prerequists-sources.list:
+    - remove cruft
 
  -- 
 
